ui2 orders page tweaks

--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -7,8 +7,7 @@
 			<a id="credit"></a>
 
 			<div ng-show="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
-				<p class="delivery-free">You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.</p><br/>
-				<p>Earn points by ordering food, sharing your order, or referring friends.</p><br/>
+				<p><span class="delivery-free">You are <b>{{account.user.points.away_free_delivery || 0}}</b> points away</span> <br><br> from a free delivery. Earn points by ordering food, sharing your order, or referring friends.</p><br/>
 			</div>
 			<div ng-show="account.user.points.free_delivery_message && account.user.points.free_delivery">
 				<p><span class="delivery-free">You have <b>{{account.user.points.free_delivery}}</b> points!</span> <br><br>The next delivery fee is on us.</p>
