--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -2,7 +2,7 @@
 
 <div class="restaurants-top-wrap content-padding">
 	<div class="restaurants-top-tag hide-mobile">
-		<h4 ng-bind-html-unsafe="slogan"></h4>
+		<h4 ng-bind-html-unsafe="slogan" class="restaurants-top-title"></h4>
 		<p ng-bind-html-unsafe="tagline"></p>
 		<p><br>{{entered}} - <a href="/location">Change</a></p>
 	</div>
@@ -79,7 +79,7 @@
 <div ng-if="restaurants">
 	<div class="restaurants-items">
 
-	<span ng-repeat="restaurant in restaurants | limitTo:restaurantsToShow">
+	<span ng-repeat="restaurant in restaurants | limitTo:restaurantsToShow" class="restaurants-repeated">
 
 			<? /*
 			<div class="restaurant-list-divider" ng-if="restaurant._divider"></div>
