--- a/include/views/default/crunchbutton/layout/html.body.phtml
+++ b/include/views/default/crunchbutton/layout/html.body.phtml
@@ -101,12 +101,12 @@
 
 					<div class="logo"><a href="javascript:;" ng-instant="navigation.home()"><div class="logo-img"></div></a></div>
 
-					<div title="Back" ng-show="navigation.buttons.back" class="nav-back" ng-instant="back()"></div>
+					<div title="Back" ng-show="navigation.buttons.back" class="hide-before-init nav-back" ng-instant="back()"></div>
 
-					<div title="Change location" ng-show="navigation.buttons.location" class="location-icon config-icon-desktop-hide" ng-instant="navigation.link('/location')"></div>
-					<div title="Menu" ng-show="navigation.buttons.menu" class="menu-icon {{ navigation.page == 'home' && 'config-icon-desktop-hide' || '' }}" ng-click="navigation.menu()"></div>
+					<div title="Change location" ng-show="navigation.buttons.location" class="hide-before-init location-icon config-icon-desktop-hide" ng-instant="navigation.link('/location')"></div>
+					<div title="Menu" ng-show="navigation.buttons.menu" class="hide-before-init menu-icon {{ navigation.page == 'home' && 'config-icon-desktop-hide' || '' }}" ng-click="navigation.menu()"></div>
 
-					<div class="signin-box-header">
+					<div class="signin-box-header hide-before-init">
 						<div ng-show="account.user.id_user" ng-instant="navigation.link('/orders')" class="signin-user" title="My Account + Past Orders"></div>
 						<div ng-show="!account.user.id_user" ng-instant="navigation.signin()" class="signin-icon"></div>
 					</div>
@@ -139,7 +139,7 @@
 
 			<div class="divider"></div>
 
-			<div class="footer">
+			<div class="footer hide-before-init">
 
 				<? if (!$this->export) : ?>
 					<div class="fb-like-mobile fb-like-box" data-href="http://www.facebook.com/crunchbutton" data-width="300" data-show-faces="false" data-stream="false" data-header="false"></div>
