--- a/include/views/default/crunchbutton/layout/html.phtml
+++ b/include/views/default/crunchbutton/layout/html.phtml
@@ -19,7 +19,7 @@ window.twttr = ( function(d, s, id) {
 	} (document, "script", "twitter-wjs") ) ;
 </script>
 <!-- Payment stuff -->
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<script src="https://js.stripe.com/v2/"></script>
 <script src="//js.balancedpayments.com/1.1/balanced.js"></script>
 
 <? if (c::config()->bundle) : ?>
