--- a/include/views/default/seven/layout/html.phtml
+++ b/include/views/default/seven/layout/html.phtml
@@ -22,7 +22,7 @@ window.twttr = ( function(d, s, id) {
 	} (document, "script", "twitter-wjs") ) ;
 </script>
 <!-- Payment stuff -->
-<? /* <script type="text/javascript" src="//js.stripe.com/v2/"></script> */ ?>
+<script type="text/javascript" src="//js.stripe.com/v2/"></script>
 <script src="//js.balancedpayments.com/1.1/balanced.js"></script>
 
 <? if (c::config()->bundle) : ?>
