--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -15,7 +15,7 @@
 <script src="/assets/cockpit/js/Chart.js"></script>
 
 <!-- Payment stuff -->
-<script src="https://js.stripe.com/v2/"></script>
+<? /* <script src="https://js.stripe.com/v2/"></script> */ ?>
 <script src="https://js.balancedpayments.com/1.1/balanced.js"></script>
 
 <script src="/assets/cockpit/js/moment.min.js"></script>
