--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -52,6 +52,10 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://cockpit.crunchbutton.com/drivers/assign/driver/1" target="_blank"><i class="fa fa-plus-circle"></i></a>
 						</div>
 					</div>
+					<div class="field-row" ng-if="staff.date_terminated_formatted">
+						<div class="field-key">Inactive since</div>
+						<div class="field-value">{{staff.date_terminated_formatted}}</div>
+					</div>
 				</div>
 
 			</div>
