--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -78,9 +78,17 @@
 
 			<li class="li-input" ng-class="{'error':form.driverEmail.$invalid}">
 				<div class="label">Email:</div>
-				<div class="input"><input type="email" name="driverEmail" ng-model="driver.email" placeholder="Email"></div>
+				<div class="input"><input type="email" name="driverEmail" ng-model="driver.email" required ng-pattern="/.*@.*/" placeholder="Email"></div>
 				<div class="box-error">
 					<small ng-show="form.driverEmail.$invalid">Enter a valid email.</small>
+				</div>
+			</li>
+
+			<li class="li-input" ng-class="{'error':form.driverDob.$invalid}">
+				<div class="label">Date of Birth:</div>
+				<div class="input"><input type="text" name="driverDob" required ng-pattern="/[0-9]{4}-[0-9]{2}-[0-9]{2}/" ng-model="driver.dob"></div>
+				<div class="box-error">
+					<small ng-show="form.driverDob.$invalid">Enter a valid format (YYYY-MM-DD)</small>
 				</div>
 			</li>
 
