--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -349,7 +349,7 @@ p {
 
 
 /* BUTTONS */
-.button {
+.button, a.button {
 	border: 0;
 	padding: .5em 0 .5em 0;
 	border-radius: 5px;
@@ -361,6 +361,14 @@ p {
 
 	@include transition(background linear 0.08s);
 }
+
+a.button{
+	display: block;
+	text-align:center;
+	text-decoration: none;
+	padding:.6em 0;
+}
+
 .button.ani-all {
 	@include gpu();
 	@include transition(all linear 0.08s);
@@ -376,6 +384,10 @@ p {
 }
 .button.facebook {
 	background: #385ca2;
+	font-weight: bold;
+}
+.button.text {
+	background: #37ba53;
 	font-weight: bold;
 }
 .button.twitter {
@@ -1308,18 +1320,18 @@ p {
 		margin-top: 10px;
 		float: left;
 	}
-	
+
 	.footer .copyright {
 		margin-top: 5px;
 		float: left;
 		font-size: 1.15em;
 	}
-	
+
 	.footer .logo {
 		width: 200px;
 		margin: 0;
 	}
-	
+
 	.footer .quote-author-image {
 		height: 60px;
 		width: 60px;
@@ -1334,20 +1346,20 @@ p {
 		margin-left: 1em;
 		margin-top: .2em;
 	}
-	
+
 	.footer .quote-author-info b {
 		color: #fff;
 	}
-	
+
 	.footer p {
 		text-align: left;
 		font-size: 1.15em;
 	}
-	
+
 	.footer .quote-author {
 		margin-top: 40px;
 	}
-	
+
 	.footer a {
 		color: #f78154;
 	}
@@ -1386,7 +1398,7 @@ p {
 		width: 100%;
 		padding-top: 60px;
 	}
-	
+
 	.footer-columns {
 		display: flex;
 		flex-direction: row;
@@ -1410,7 +1422,7 @@ p {
 		width: 30%;
 	}
 	.footer-column-info {
-		
+
 	}
 	.footer-column-quote {
 		vertical-align: center;
@@ -1418,7 +1430,7 @@ p {
 	.footer-column-quote .quote {
 		font-size: 4em;
 	}
-	
+
 	.footer .content-padding {
 		padding-bottom: 0;
 	}
@@ -3820,7 +3832,7 @@ font-familt: "Museo Slab";
 	.button-refer {
 		width: 48%;
 	}
-	
+
 	.user-account-credit .delivery-free, .account-your-orders {
 		font-size: 2em;
 	}
