--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -66,36 +66,44 @@
 							<span></span>You are <strong>{{account.user.points.away_free_delivery}}</strong> points away from a free delivery.
 						</p>
 						<br/><br/>
-						<p>
-							Want more points?
-						</p>
-						<br/><br/>
-						<br>
-						<div ng-if="account.user.has_auth && !order.reward.shared.facebook">
-							<p>Double your points by sharing on Facebook:</p>
-							<button class="button facebook" ng-click="referral.facebook();">
-								<i class="fa fa-facebook-square"></i> <span>Share</span></button>
-						</div>
-						<div ng-if="order.reward.shared.facebook">
-							Thanks for sharing on Facebook.
-						</div>
-						<div class="divider"></div>
-						<br>
-						<div ng-if="account.user.has_auth && !order.reward.shared.twitter">
-							<p>Triple them by sharing on Twitter:</p>
-							<button class="button twitter" ng-click="referral.twitter()">
-								<i class="fa fa-twitter-square"></i> <span>Tweet</span>
-							</button>
+						<div ng-if="!isMobile">
+							<p>
+								Want more points?
+							</p>
+							<br/><br/>
+							<br>
+							<div ng-if="account.user.has_auth && !order.reward.shared.facebook">
+								<p>Double your points by sharing on Facebook:</p>
+								<button class="button facebook" ng-click="referral.facebook();">
+									<i class="fa fa-facebook-square"></i> <span>Share</span></button>
+							</div>
+							<div ng-if="order.reward.shared.facebook">
+								Thanks for sharing on Facebook.
+							</div>
+							<div class="divider"></div>
+							<br>
+							<div ng-if="account.user.has_auth && !order.reward.shared.twitter">
+								<p>Triple them by sharing on Twitter:</p>
+								<button class="button twitter" ng-click="referral.twitter()">
+									<i class="fa fa-twitter-square"></i> <span>Tweet</span>
+								</button>
 
+							</div>
+							<div ng-if="order.reward.shared.twitter">
+								Thanks for sharing on Twitter.
+							</div>
+							<div class="divider"></div>
+							<div ng-show="order._new && referral.invite_url && referral.enabled">
+								<br>
+								P.S. - Earn a FREE DELIVERY for every new customer you refer with your link!
+								<br>
+							</div>
 						</div>
-						<div ng-if="order.reward.shared.twitter">
-							Thanks for sharing on Twitter.
-						</div>
-						<div class="divider"></div>
-						<div ng-show="order._new && referral.invite_url && referral.enabled">
-							<br>
-							P.S. - Earn a FREE DELIVERY for every new customer you refer with your link!
-							<br>
+
+						<div ng-if="isMobile">
+							<a ng-if="referral.sms" href="sms:{{referral.sms}}" class="button text button-refer">
+								<i class="fa fa-mobile"></i> <span>Text your friends</span>
+							</a>
 						</div>
 
 					</div>
