--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 	<div class="user-account-credit col-box">
-		
+
 		<div class="two-col">
 			<a id="credit"></a>
 
@@ -21,27 +21,39 @@
 				<p>
 					Get your friends to enter <b>your referal code</b> in the Notes section of their first order, and they will get $3 off and you a 	delivery free ;)
 				</p><br/>
-				
+
 			</div>
 			<br/>
 		</div>
 		<div class="two-col">
-			<div class="col-box">
 
-				<button class="button facebook button-refer" ng-click="referral.facebook()">
-					<i class="fa fa-facebook-square"></i> <span>Share</span>
-				</button>
 
-				<br><br>
 
-				<button class="button twitter button-refer" ng-click="referral.twitter()">
-					<i class="fa fa-twitter-square"></i> <span>Tweet</span>
-				</button>
-			</div>
+				<div ng-if="isMobile">
+					<a ng-if="referral.sms" href="sms:{{referral.sms}}" class="button text button-refer">
+						<i class="fa fa-mobile"></i> <span>Text your friends</span>
+					</a>
+				</div>
+
+				<div ng-if="!isMobile">
+					<button class="button facebook button-refer" ng-click="referral.facebook()">
+						<i class="fa fa-facebook-square"></i> <span>Share</span>
+					</button>
+
+					<br><br>
+
+					<button class="button twitter button-refer" ng-click="referral.twitter()">
+						<i class="fa fa-twitter-square"></i> <span>Tweet</span>
+					</button>
+
+				</div>
+
 			<br><br>
 			<p>Your code: <span class="referal-text-spacer"></span><b>{{account.user.invite_code}}</b></p>
-			<br>
-			<p>Invite URL: <span class="referal-text-spacer"></span><input class="referal-text-box" type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="http://{{referral.cleaned_url()}}"></p>
+			<div ng-if="!isMobile">
+				<br>
+				<p>Invite URL: <span class="referal-text-spacer"></span><input class="referal-text-box" type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="http://{{referral.cleaned_url()}}"></p>
+			</div>
 		</div>
 	</div>
 
