--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -45,6 +45,14 @@
 					</tr>
 				</table>
 			</li>
+			<li ng-if="account.user.id_user" ng-click="navigation.link('/free-food', null, true)" ng-class="{'nav-active': (navigation.page == 'free-food')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-star"></i></td>
+						<td class="side-menu-label">Free food</a></td>
+					</tr>
+				</table>
+			</li>
 			<li ng-click="navigation.link('/work', null, true)" ng-class="{'nav-active': (navigation.page == 'work')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
@@ -134,7 +142,7 @@
 					</div>
 
 					<div title="Crunchbutton" class="logo animated-resize" ng-click="navigation.home()"></div>
-					
+
 					<div class="desktop-top-nav hide-mobile hide-before-init">
 						<a href="/work"><u>Work with us!</u></a>
 						<a href="/">Home</a>
@@ -161,7 +169,7 @@
 
 			<div class="divider"></div>
 
-			
+
 
 		</div>
 
@@ -223,7 +231,7 @@
 			<div class="fb-like-box" data-width="200" data-href="https://www.facebook.com/crunchbutton" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div>
 		<? endif ; ?>
 		*/ ?>
-		
+
 		<br><br><br><br>
 		<div class="divider line"></div>
 		<br><br>
