--- a/include/views/default/cockpit2/layout/html.phtml
+++ b/include/views/default/cockpit2/layout/html.phtml
@@ -9,4 +9,5 @@
 <?=$this->display('layout/html.bottom')?>
 
 <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+<script src="//js.stripe.com/v2/" bundle="false"></script>
 <? /* &key=AIzaSyBSQXZPG5n_yRG4umquaDANsL62uhlgaE8 */ ?>
