--- a/include/views/default/seven/frontend/free-food.phtml
+++ b/include/views/default/seven/frontend/free-food.phtml
@@ -4,52 +4,47 @@
 	<div class="user-account-credit col-box">
 
 		<div class="two-col">
+
+			<div ng-show="account.user.invite_code">
 				<p>
 					Get your friends to enter <b>your referal code</b> in the Notes section of their first order, and they will get $3 off and you a 	delivery free ;)
-				</p>
-				<br/>
+				</p><br/>
+
+			</div>
 			<br/>
 		</div>
-		<div class="two-col">
+			<div class="two-col">
 
-			<div ng-if="isMobile">
-				<a ng-if="referral.sms" href="sms:{{referral.sms}}" class="button text button-refer">
-					<i class="fa fa-mobile"></i> <span>Text your friends</span>
-				</a>
-			</div>
+				<div class="hide-desktop">
+					<a href="{{referral.sms}}" target="_blank">
+						<button class="button green button-invite">
+							<i class="fa fa-comment"></i> <span>Invite Friends</span>
+						</button>
+					</a>
+				</div>
 
-			<div ng-if="!isMobile">
-				<button class="button facebook button-refer" ng-click="referral.facebook()">
-					<i class="fa fa-facebook"></i> <span>Share</span>
-				</button>
+				<div class="hide-mobile">
+					<div class="col-box">
+						<button class="button facebook button-refer" ng-click="referral.facebook()">
+							<i class="fa fa-facebook-square"></i> <span>Share</span>
+						</button>
 
-				<br><br>
+						<br><br>
 
-				<button class="button twitter button-refer" ng-click="referral.twitter()">
-					<i class="fa fa-twitter"></i> <span>Tweet</span>
-				</button>
-			</div>
+						<button class="button twitter button-refer" ng-click="referral.twitter()">
+							<i class="fa fa-twitter-square"></i> <span>Tweet</span>
+						</button>
+					</div>
 
+				</div>
 
 			<br><br>
-			<p>Your referral code: <span class="referal-text-spacer"></span><b>{{referral.invite_code}}</b></p>
-
-			<div ng-if="!isMobile">
-				<br><br>
-				<p>Your code: <span class="referal-text-spacer"></span><b>{{account.user.invite_code}}</b></p>
+			<p>Your code: <span class="referal-text-spacer"></span><b>{{account.user.invite_code}}</b></p>
+			<div class="hide-mobile">
 				<br>
 				<p>Invite URL: <span class="referal-text-spacer"></span><input class="referal-text-box" type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="http://{{referral.cleaned_url()}}"></p>
 			</div>
-
 		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<br><br><br>
-
-	<div ng-show="orders.list">
-		<div class="orders-oranges animated-resize"></div>
 	</div>
 
 </div>
