--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -4008,3 +4008,8 @@ font-familt: "Museo Slab";
 	font-weight: bold;
 	@include force-select();
 }
+
+.restaurant-delivery-free {
+	margin-top: 1em;
+	text-align: center;
+}
