--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -479,7 +479,7 @@
 		</div>
 
 		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message">
-			<p class="delivery-free">
+			<p class="delivery-free restaurant-delivery-free">
 				<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
 				<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
 				<br/>
