--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -4013,3 +4013,12 @@ font-familt: "Museo Slab";
 	margin-top: 1em;
 	text-align: center;
 }
+
+.order-delivery-free {
+	text-align: center;
+}
+.order-earn-mobile {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	text-align: center;
+}
