--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -210,11 +210,11 @@
 				</ul>
 			</div>
 			<div class="footer-column-quote">
-				<div class="quote-wrap">
-					<sup class="quote">&#8220;</sup>
-					<p><i>The only food group is Sushi.</i></p>
-					<sub class="quote">&#8221;</sub>
-				</div>
+				<div class="quote-wrap"><p>
+					<sup class="fa fa-quote-left"></sup>
+					<i>Here is something funny written by someone else.</i>
+					<sub class="fa fa-quote-right"></sub>
+				</p></div>
 				<div class="quote-author">
 					<div class="quote-author-image" style="background-image: url(http://graph.facebook.com/witgi/picture?width=120&height=120)"></div>
 					<div class="quote-author-info">
@@ -271,6 +271,7 @@
 
 <div id="fb-root"></div>
 <div class="is-ui2"></div>
+<div class="body-loader hide-after-init"></div>
 <div class="preload-home"></div>
 
 <div class="location-overpull-preload-one"></div>
