--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="restaurants-top-wrap content-padding">
-	<div class="restaurants-top-tag hide-mobile">
+	<div class="restaurants-top-tag hide-mobile" ng-if="slogan">
 		<h4 ng-bind-html-unsafe="slogan" class="restaurants-top-title"></h4>
 		<p ng-bind-html-unsafe="tagline"></p>
 		<p><br>{{entered}} - <a href="/location">Change</a></p>
